[package]
name = "tokio-libssh2"
version = "0.0.1"
publish = false
description = """
A libssh2 Rust bindings focusd on interoperability with Tokio.
"""
authors = ["Yusuke Sasaki <yusuke.sasaki.nuem@gmail.com>"]
license = "MIT OR Apache-2.0"
edition = "2018"
readme = "README.md"

[dependencies]
bitflags = "1"
futures = "0.3"
libc = "0.2"
libssh2-sys = "0.2.14"
mio = "0.6"
tokio = { version = "0.2", features = ["full"] }
thiserror = "1"
tracing = "0.1"

[dev-dependencies]
anyhow = "1"
libtest-mimic = "0.2"
tracing-subscriber = "0.1"

[[test]]
name = "test_integration"
path = "tests/test_integration/main.rs"
harness = false

[workspace]
members = [
    ".",
    "xtask",
]
